# ufs-srweather-app

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CMakeLists.txt  CODEOWNERS  ERRATA.md  Externals.cfg  Externals_AQM.cfg  Externals_aqm.cfg  Externals_smoke_dust.cfg  LICENSE.md  README.md  app_build.sh  aqm_environment.yml  auto_build_exec.sh  build_RRFS-CMAQ-DA.sh  build_RRFS-CMAQ.sh  build_RRFS.sh  build_UFS-SRW-App.sh  devbuild.sh  devclean.sh  environment.yml  graphics_environment.yml  lmod-setup.sh  rename_model.sh  script.sh  srw-container.sh  ufs-srweather-app.settings.in  ufs_srweather_app.settings.in  ufs_srweather_app_meta.h.in  update_fork.pl
.cicd/: Jenkinsfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  codecov.yml
comp_conf/: cmake_env_machine.sh
conf_cmaq/: CMakeLists_src.txt  Externals.cfg_aqm  fv3gfs_aqm_build_hera_intel.env  fv3gfs_aqm_src_CMakeLists.txt  srw_modlist_rrfscmaq.txt  update_conf.env  update_conf.sh  update_conf_DA.sh
conf_cpl/: detect_machine.sh  update_conf_rrfs_cmaq.sh
doc/: Makefile  README  RUNTIME  conf.py  index.rst  references.bib  requirements.in  requirements.txt
docs/: ECFLOW_NCO  INSTALL  Makefile  README_REGIONAL.txt  README_cheyenne_gnu.txt  README_cheyenne_intel.txt  README_gaea_intel.txt  README_hera_intel.txt  README_jet_intel.txt  README_macos_gccgfortran.txt  README_orion_intel.txt  README_wcoss_cray_intel.txt  README_wcoss_dell_p3_intel.txt  RUNTIME  conf.py  index.rst  requirements.txt
ecf/: cycle_end.ecf  setup_ecf_links.sh
env/: build_app.sh  build_cheyenne_gnu.env  build_cheyenne_intel.env  build_gaea_intel.env  build_hera_gnu.env  build_hera_intel.env  build_hera_intel.env_empty  build_jet_intel  build_jet_intel.env  build_macos_gnu.env  build_odin_intel  build_odin_intel.env  build_orion_intel.env  build_singularity_gnu  build_singularity_gnu.env  build_wcoss_cray_intel.env  build_wcoss_dell_p3_intel.env  detect_machine.sh  set_machine.sh  srw_common  ufs_common  wflow_app.sh  wflow_cheyenne  wflow_cheyenne.env  wflow_gaea.env  wflow_hera  wflow_hera.env  wflow_jet  wflow_jet.env  wflow_macos.env  wflow_odin  wflow_odin.env  wflow_orion  wflow_orion.env  wflow_singularity  wflow_singularity.env  wflow_wcoss_cray.env  wflow_wcoss_dell_p3.env
etc/: lmod-setup.csh  lmod-setup.sh  lmod-setup.sh_orig
jobs/: JAQM_AQM_ICS  JAQM_AQM_LBCS  JAQM_BIAS_CORRECTION_O3  JAQM_BIAS_CORRECTION_PM25  JAQM_DATA_CLEANUP  JAQM_FIRE_EMISSION  JAQM_FORECAST  JAQM_FORECAST_MANAGER  JAQM_GET_EXTRN_MDL_FILES  JAQM_ICS  JAQM_LBCS  JAQM_MAKE_ICS  JAQM_MAKE_LBCS  JAQM_MANAGER  JAQM_NEXUS_EMISSION  JAQM_NEXUS_GFS_SFC  JAQM_NEXUS_POST_SPLIT  JAQM_OUTPUT  JAQM_POINT_SOURCE  JAQM_POST  JAQM_POST_STAT_O3  JAQM_POST_STAT_PM25  JAQM_PRE_POST_STAT  JAQM_RUN_FCST  JAQM_RUN_POST  JDATA_CLEANUP  JREGIONAL_ADD_AQM_ICS  JREGIONAL_ADD_AQM_LBCS  JREGIONAL_ANALYSIS_GSI  JREGIONAL_AQM_ICS  JREGIONAL_AQM_LBCS  JREGIONAL_BIAS_CORRECTION_O3  JREGIONAL_BIAS_CORRECTION_PM25  JREGIONAL_CHECK_POST_OUTPUT  JREGIONAL_FIRE_EMISSION  JREGIONAL_GET_DA_OBS  JREGIONAL_GET_EXTRN_FILES  JREGIONAL_GET_EXTRN_MDL_FILES  JREGIONAL_GET_FILES_ICS  JREGIONAL_GET_OBS_CCPA  (+95 more)
modulefiles/: COMMITED_build_orion_intel.lua  build_ami_intel.lua  build_cheyenne_gnu  build_cheyenne_gnu.lua  build_cheyenne_intel  build_cheyenne_intel.lua  build_derecho_intel.lua  build_gaea-c5_intel.lua  build_gaea_c5_intel.lua  build_gaea_intel  build_gaea_intel.lua  build_hera_gnu.lua  build_hera_intel  build_hera_intel.lua  build_hera_intel_prod.lua  build_hercules_intel.lua  build_jet_intel  build_jet_intel.env  build_jet_intel.lua  build_linux_gnu  build_linux_gnu.lua  build_linux_intel.lua  build_macos_gnu  build_macos_gnu.lua  build_noaacloud_intel  build_noaacloud_intel.lua  build_odin_intel  build_odin_intel.lua  build_orion_intel  build_orion_intel.env  build_orion_intel.lua  build_orion_intel_prod.lua  build_singularity_gnu  build_singularity_gnu.lua  build_singularity_intel.lua  build_wcoss2_intel  build_wcoss2_intel.lua  build_wcoss_dell_p3_intel  cheyenne.default  conda.lua  (+38 more)
parm/: FV3.input.yml  FV3LAM_wflow.xml  README.xml_templating.md  aqm.rc  aqm_environment.yml  aqm_utils  config.aqm.yaml  config.smoke_dust.yaml  config.yaml  config_defaults.yaml  config_utils.py  constants.yaml  data_locations.yml  detect_platform.sh  diag_table.FV3_GFS_2017_gfdlmp  diag_table.FV3_GFS_2017_gfdlmp_regional  diag_table.FV3_GFS_v15_thompson_mynn_lam3km  diag_table.FV3_GFS_v15p2  diag_table.FV3_GFS_v16  diag_table.FV3_GFS_v17_p8  diag_table.FV3_HRRR  diag_table.FV3_RAP  diag_table.FV3_RRFS_v0  diag_table.FV3_RRFS_v1beta  diag_table.FV3_WoFS_v0  diag_table_aqm.FV3_GFS_v15p2  diag_table_aqm.FV3_GFS_v16  diag_table_aqm.FV3_GFS_v17_p8  diag_table_smoke_dust.FV3_HRRR_gf  environment.yml  field_table.FV3_HRRR  field_table_aqm.FV3_GFS_v16  field_table_aqm.FV3_GFS_v17_p8  field_table_smoke_dust.FV3_HRRR_gf  fixed_files_mapping.yaml  generate_FV3LAM_wflow.py  get_crontab_contents.py  input.nml.FV3  launch_FV3LAM_wflow.sh  link_fix.py  (+20 more)
regional/: FV3.xml  FV3_Jet.xml  FV3_Odin.xml  FV3_Theia.xml  README_REGIONAL.txt  Run_rocoto.ksh  Run_rocotoboot.ksh  Run_rocotocheck.ksh  Run_rocotorewind.ksh  Run_rocotostat.ksh  build_regional  run_chgres.sh  run_fv3.sh  run_regional  run_rocoto_Jet.sh  run_rocoto_Odin.sh  run_rocoto_Theia.ksh  runrocoto
scripts/: .exregional_make_orog.sh.swp  exaqm_aqm_ics.sh  exaqm_aqm_lbcs.sh  exaqm_bias_correction_o3.sh  exaqm_bias_correction_pm25.sh  exaqm_data_cleanup.sh  exaqm_fire_emission.sh  exaqm_forecast.sh  exaqm_forecast_manager.sh  exaqm_get_extrn_mdl_files.sh  exaqm_ics.sh  exaqm_lbcs.sh  exaqm_make_ics.sh  exaqm_make_lbcs.sh  exaqm_manager.sh  exaqm_nexus_emission.sh  exaqm_nexus_gfs_sfc.sh  (+140 more)
sorc/: CMakeLists.txt  Externals.cfg  Externals_aqm.cfg  Externals_smoke_dust.cfg  app_build.sh  auto_A1_checkout.sh  auto_A2_build_exec.sh  auto_A2_cp_fix.sh  auto_A3_cp_fix.sh  auto_build_exec.sh  build_settings_template.yaml  devbuild.sh  devclean.sh  patch_macos_arm64_sorc_cmakelists.txt  post_checkout_nco.sh  ufs_srweather_app.settings.in  ufs_srweather_app_meta.h.in
(+2088 files in other folders)
